docs/4.20/rest_api/operator_apis/clustercsidriver-operator-openshift-io-v1.md
Description
ClusterCSIDriver object allows management and configuration of a CSI driver operator installed by default in OpenShift. Name of the object must be name of the CSI driver it operates. See CSIDriverName type for list of allowed values.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

Required
- `spec`

# Specification

| Property     | Type                                                                                 | Description                                                                                                                                                                                                                                                                                          |
|--------------|--------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `apiVersion` | `string`                                                                             | APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: <https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources>  |
| `kind`       | `string`                                                                             | Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: <https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds> |
| `metadata`   | [`ObjectMeta`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-ObjectMeta) | Standard object’s metadata. More info: <https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata>                                                                                                                                                                |
| `spec`       | `object`                                                                             | spec holds user settable values for configuration                                                                                                                                                                                                                                                    |
| `status`     | `object`                                                                             | status holds observed values from the cluster. They may not be overridden.                                                                                                                                                                                                                           |

## .spec

Description
spec holds user settable values for configuration

Type
`object`

<table>
<colgroup>
<col style="width: 33%" />
<col style="width: 33%" />
<col style="width: 33%" />
</colgroup>
<thead>
<tr class="header">
<th style="text-align: left;">Property</th>
<th style="text-align: left;">Type</th>
<th style="text-align: left;">Description</th>
</tr>
</thead>
<tbody>
<tr class="odd">
<td style="text-align: left;"><p><code>driverConfig</code></p></td>
<td style="text-align: left;"><p><code>object</code></p></td>
<td style="text-align: left;"><p>driverConfig can be used to specify platform specific driver configuration. When omitted, this means no opinion and the platform is left to choose reasonable defaults. These defaults are subject to change over time.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>logLevel</code></p></td>
<td style="text-align: left;"><p><code>string</code></p></td>
<td style="text-align: left;"><p>logLevel is an intent based logging for an overall component. It does not give fine grained control, but it is a simple way to manage coarse grained logging choices that operators have to interpret for their operands.</p>
<p>Valid values are: "Normal", "Debug", "Trace", "TraceAll". Defaults to "Normal".</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>managementState</code></p></td>
<td style="text-align: left;"><p><code>string</code></p></td>
<td style="text-align: left;"><p>managementState indicates whether and how the operator should manage the component</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>observedConfig</code></p></td>
<td style="text-align: left;"><p>``</p></td>
<td style="text-align: left;"><p>observedConfig holds a sparse config that controller has observed from the cluster state. It exists in spec because it is an input to the level for the operator</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>operatorLogLevel</code></p></td>
<td style="text-align: left;"><p><code>string</code></p></td>
<td style="text-align: left;"><p>operatorLogLevel is an intent based logging for the operator itself. It does not give fine grained control, but it is a simple way to manage coarse grained logging choices that operators have to interpret for themselves.</p>
<p>Valid values are: "Normal", "Debug", "Trace", "TraceAll". Defaults to "Normal".</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>storageClassState</code></p></td>
<td style="text-align: left;"><p><code>string</code></p></td>
<td style="text-align: left;"><p>storageClassState determines if CSI operator should create and manage storage classes. If this field value is empty or Managed - CSI operator will continuously reconcile storage class and create if necessary. If this field value is Unmanaged - CSI operator will not reconcile any previously created storage class. If this field value is Removed - CSI operator will delete the storage class it created previously. When omitted, this means the user has no opinion and the platform chooses a reasonable default, which is subject to change over time. The current default behaviour is Managed.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>unsupportedConfigOverrides</code></p></td>
<td style="text-align: left;"><p>``</p></td>
<td style="text-align: left;"><p>unsupportedConfigOverrides overrides the final configuration that was computed by the operator. Red Hat does not support the use of this field. Misuse of this field could lead to unexpected behavior or conflict with other configuration options. Seek guidance from the Red Hat support before using this field. Use of this property blocks cluster upgrades, it must be removed before upgrading your cluster.</p></td>
</tr>
</tbody>
</table>

## .spec.driverConfig

Description
driverConfig can be used to specify platform specific driver configuration. When omitted, this means no opinion and the platform is left to choose reasonable defaults. These defaults are subject to change over time.

Type
`object`

Required
- `driverType`

| Property     | Type     | Description                                                                                                                                                                                                 |
|--------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `aws`        | `object` | aws is used to configure the AWS CSI driver.                                                                                                                                                                |
| `azure`      | `object` | azure is used to configure the Azure CSI driver.                                                                                                                                                            |
| `driverType` | `string` | driverType indicates type of CSI driver for which the driverConfig is being applied to. Valid values are: AWS, Azure, GCP, IBMCloud, vSphere and omitted. Consumers should treat unknown values as a NO-OP. |
| `gcp`        | `object` | gcp is used to configure the GCP CSI driver.                                                                                                                                                                |
| `ibmcloud`   | `object` | ibmcloud is used to configure the IBM Cloud CSI driver.                                                                                                                                                     |
| `vSphere`    | `object` | vSphere is used to configure the vsphere CSI driver.                                                                                                                                                        |

## .spec.driverConfig.aws

Description
aws is used to configure the AWS CSI driver.

Type
`object`

| Property           | Type     | Description                                                                                                                                                                                              |
|--------------------|----------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `efsVolumeMetrics` | `object` | efsVolumeMetrics sets the configuration for collecting metrics from EFS volumes used by the EFS CSI Driver.                                                                                              |
| `kmsKeyARN`        | `string` | kmsKeyARN sets the cluster default storage class to encrypt volumes with a user-defined KMS key, rather than the default KMS key used by AWS. The value may be either the ARN or Alias ARN of a KMS key. |

## .spec.driverConfig.aws.efsVolumeMetrics

Description
efsVolumeMetrics sets the configuration for collecting metrics from EFS volumes used by the EFS CSI Driver.

Type
`object`

Required
- `state`

| Property        | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-----------------|----------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `recursiveWalk` | `object` | recursiveWalk provides additional configuration for collecting volume metrics in the AWS EFS CSI Driver when the state is set to RecursiveWalk.                                                                                                                                                                                                                                                                                               |
| `state`         | `string` | state defines the state of metric collection in the AWS EFS CSI Driver. This field is required and must be set to one of the following values: Disabled or RecursiveWalk. Disabled means no metrics collection will be performed. This is the default value. RecursiveWalk means the AWS EFS CSI Driver will recursively scan volumes to collect metrics. This process may result in high CPU and memory usage, depending on the volume size. |

## .spec.driverConfig.aws.efsVolumeMetrics.recursiveWalk

Description
recursiveWalk provides additional configuration for collecting volume metrics in the AWS EFS CSI Driver when the state is set to RecursiveWalk.

Type
`object`

| Property               | Type      | Description                                                                                                                                                                                                                                                                                                           |
|------------------------|-----------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `fsRateLimit`          | `integer` | fsRateLimit defines the rate limit, in goroutines per file system, for processing volume metrics. When omitted, this means no opinion and the platform is left to choose a reasonable default, which is subject to change over time. The current default is 5. The valid range is from 1 to 100 goroutines.           |
| `refreshPeriodMinutes` | `integer` | refreshPeriodMinutes specifies the frequency, in minutes, at which volume metrics are refreshed. When omitted, this means no opinion and the platform is left to choose a reasonable default, which is subject to change over time. The current default is 240. The valid range is from 1 to 43200 minutes (30 days). |

## .spec.driverConfig.azure

Description
azure is used to configure the Azure CSI driver.

Type
`object`

| Property            | Type     | Description                                                                                                                                                        |
|---------------------|----------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `diskEncryptionSet` | `object` | diskEncryptionSet sets the cluster default storage class to encrypt volumes with a customer-managed encryption set, rather than the default platform-managed keys. |

## .spec.driverConfig.azure.diskEncryptionSet

Description
diskEncryptionSet sets the cluster default storage class to encrypt volumes with a customer-managed encryption set, rather than the default platform-managed keys.

Type
`object`

Required
- `name`

- `resourceGroup`

- `subscriptionID`

| Property         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
|------------------|----------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `name`           | `string` | name is the name of the disk encryption set that will be set on the default storage class. The value should consist of only alphanumberic characters, underscores (\_), hyphens, and be at most 80 characters in length.                                                                                                                                                                                                                                                                                                                                   |
| `resourceGroup`  | `string` | resourceGroup defines the Azure resource group that contains the disk encryption set. The value should consist of only alphanumberic characters, underscores (\_), parentheses, hyphens and periods. The value should not end in a period and be at most 90 characters in length.                                                                                                                                                                                                                                                                          |
| `subscriptionID` | `string` | subscriptionID defines the Azure subscription that contains the disk encryption set. The value should meet the following conditions: 1. It should be a 128-bit number. 2. It should be 36 characters (32 hexadecimal characters and 4 hyphens) long. 3. It should be displayed in five groups separated by hyphens (-). 4. The first group should be 8 characters long. 5. The second, third, and fourth groups should be 4 characters long. 6. The fifth group should be 12 characters long. An Example SubscrionID: f2007bbf-f802-4a47-9336-cf7c6b89b378 |

## .spec.driverConfig.gcp

Description
gcp is used to configure the GCP CSI driver.

Type
`object`

| Property | Type     | Description                                                                                                                                           |
|----------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------|
| `kmsKey` | `object` | kmsKey sets the cluster default storage class to encrypt volumes with customer-supplied encryption keys, rather than the default keys managed by GCP. |

## .spec.driverConfig.gcp.kmsKey

Description
kmsKey sets the cluster default storage class to encrypt volumes with customer-supplied encryption keys, rather than the default keys managed by GCP.

Type
`object`

Required
- `keyRing`

- `name`

- `projectID`

| Property    | Type     | Description                                                                                                                                                                                                                                                              |
|-------------|----------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `keyRing`   | `string` | keyRing is the name of the KMS Key Ring which the KMS Key belongs to. The value should correspond to an existing KMS key ring and should consist of only alphanumeric characters, hyphens (-) and underscores (\_), and be at most 63 characters in length.              |
| `location`  | `string` | location is the GCP location in which the Key Ring exists. The value must match an existing GCP location, or "global". Defaults to global, if not set.                                                                                                                   |
| `name`      | `string` | name is the name of the customer-managed encryption key to be used for disk encryption. The value should correspond to an existing KMS key and should consist of only alphanumeric characters, hyphens (-) and underscores (\_), and be at most 63 characters in length. |
| `projectID` | `string` | projectID is the ID of the Project in which the KMS Key Ring exists. It must be 6 to 30 lowercase letters, digits, or hyphens. It must start with a letter. Trailing hyphens are prohibited.                                                                             |

## .spec.driverConfig.ibmcloud

Description
ibmcloud is used to configure the IBM Cloud CSI driver.

Type
`object`

Required
- `encryptionKeyCRN`

| Property           | Type     | Description                                                                                                                                   |
|--------------------|----------|-----------------------------------------------------------------------------------------------------------------------------------------------|
| `encryptionKeyCRN` | `string` | encryptionKeyCRN is the IBM Cloud CRN of the customer-managed root key to use for disk encryption of volumes for the default storage classes. |

## .spec.driverConfig.vSphere

Description
vSphere is used to configure the vsphere CSI driver.

Type
`object`

| Property                                   | Type             | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
|--------------------------------------------|------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `globalMaxSnapshotsPerBlockVolume`         | `integer`        | globalMaxSnapshotsPerBlockVolume is a global configuration parameter that applies to volumes on all kinds of datastores. If omitted, the platform chooses a default, which is subject to change over time, currently that default is 3. Snapshots can not be disabled using this parameter. Increasing number of snapshots above 3 can have negative impact on performance, for more details see: <https://kb.vmware.com/s/article/1025279> Volume snapshot documentation: <https://docs.vmware.com/en/VMware-vSphere-Container-Storage-Plug-in/3.0/vmware-vsphere-csp-getting-started/GUID-E0B41C69-7EEB-450F-A73D-5FD2FF39E891.html> |
| `granularMaxSnapshotsPerBlockVolumeInVSAN` | `integer`        | granularMaxSnapshotsPerBlockVolumeInVSAN is a granular configuration parameter on vSAN datastore only. It overrides GlobalMaxSnapshotsPerBlockVolume if set, while it falls back to the global constraint if unset. Snapshots for VSAN can not be disabled using this parameter.                                                                                                                                                                                                                                                                                                                                                       |
| `granularMaxSnapshotsPerBlockVolumeInVVOL` | `integer`        | granularMaxSnapshotsPerBlockVolumeInVVOL is a granular configuration parameter on Virtual Volumes datastore only. It overrides GlobalMaxSnapshotsPerBlockVolume if set, while it falls back to the global constraint if unset. Snapshots for VVOL can not be disabled using this parameter.                                                                                                                                                                                                                                                                                                                                            |
| `topologyCategories`                       | `array (string)` | topologyCategories indicates tag categories with which vcenter resources such as hostcluster or datacenter were tagged with. If cluster Infrastructure object has a topology, values specified in Infrastructure object will be used and modifications to topologyCategories will be rejected.                                                                                                                                                                                                                                                                                                                                         |

## .status

Description
status holds observed values from the cluster. They may not be overridden.

Type
`object`

| Property                  | Type      | Description                                                                                                             |
|---------------------------|-----------|-------------------------------------------------------------------------------------------------------------------------|
| `conditions`              | `array`   | conditions is a list of conditions and their status                                                                     |
| `conditions[]`            | `object`  | OperatorCondition is just the standard condition fields.                                                                |
| `generations`             | `array`   | generations are used to determine when an item needs to be reconciled or has changed in a way that needs a reaction.    |
| `generations[]`           | `object`  | GenerationStatus keeps track of the generation for a given resource so that decisions about forced updates can be made. |
| `latestAvailableRevision` | `integer` | latestAvailableRevision is the deploymentID of the most recent deployment                                               |
| `observedGeneration`      | `integer` | observedGeneration is the last generation change you’ve dealt with                                                      |
| `readyReplicas`           | `integer` | readyReplicas indicates how many replicas are ready and at the desired state                                            |
| `version`                 | `string`  | version is the level this availability applies to                                                                       |

## .status.conditions

Description
conditions is a list of conditions and their status

Type
`array`

## .status.conditions\[\]

Description
OperatorCondition is just the standard condition fields.

Type
`object`

Required
- `lastTransitionTime`

- `status`

- `type`

| Property             | Type     | Description                                                                                                                                                                                                                          |
|----------------------|----------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `lastTransitionTime` | `string` | lastTransitionTime is the last time the condition transitioned from one status to another. This should be when the underlying condition changed. If that is not known, then using the time when the API field changed is acceptable. |
| `message`            | `string` |                                                                                                                                                                                                                                      |
| `reason`             | `string` |                                                                                                                                                                                                                                      |
| `status`             | `string` | status of the condition, one of True, False, Unknown.                                                                                                                                                                                |
| `type`               | `string` | type of condition in CamelCase or in foo.example.com/CamelCase.                                                                                                                                                                      |

## .status.generations

Description
generations are used to determine when an item needs to be reconciled or has changed in a way that needs a reaction.

Type
`array`

## .status.generations\[\]

Description
GenerationStatus keeps track of the generation for a given resource so that decisions about forced updates can be made.

Type
`object`

Required
- `group`

- `name`

- `namespace`

- `resource`

| Property         | Type      | Description                                                                                                           |
|------------------|-----------|-----------------------------------------------------------------------------------------------------------------------|
| `group`          | `string`  | group is the group of the thing you’re tracking                                                                       |
| `hash`           | `string`  | hash is an optional field set for resources without generation that are content sensitive like secrets and configmaps |
| `lastGeneration` | `integer` | lastGeneration is the last generation of the workload controller involved                                             |
| `name`           | `string`  | name is the name of the thing you’re tracking                                                                         |
| `namespace`      | `string`  | namespace is where the thing you’re tracking is                                                                       |
| `resource`       | `string`  | resource is the resource type of the thing you’re tracking                                                            |

# API endpoints

The following API endpoints are available:

- `/apis/operator.openshift.io/v1/clustercsidrivers`

  - `DELETE`: delete collection of ClusterCSIDriver

  - `GET`: list objects of kind ClusterCSIDriver

  - `POST`: create a ClusterCSIDriver

- `/apis/operator.openshift.io/v1/clustercsidrivers/{name}`

  - `DELETE`: delete a ClusterCSIDriver

  - `GET`: read the specified ClusterCSIDriver

  - `PATCH`: partially update the specified ClusterCSIDriver

  - `PUT`: replace the specified ClusterCSIDriver

- `/apis/operator.openshift.io/v1/clustercsidrivers/{name}/status`

  - `GET`: read status of the specified ClusterCSIDriver

  - `PATCH`: partially update status of the specified ClusterCSIDriver

  - `PUT`: replace status of the specified ClusterCSIDriver

## /apis/operator.openshift.io/v1/clustercsidrivers

HTTP method
`DELETE`

Description
delete collection of ClusterCSIDriver

| HTTP code          | Reponse body                                                                        |
|--------------------|-------------------------------------------------------------------------------------|
| 200 - OK           | [`Status`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-Status) schema |
| 401 - Unauthorized | Empty                                                                               |

HTTP responses

HTTP method
`GET`

Description
list objects of kind ClusterCSIDriver

| HTTP code          | Reponse body                                                                                        |
|--------------------|-----------------------------------------------------------------------------------------------------|
| 200 - OK           | [`ClusterCSIDriverList`](../objects/index.xml#io-openshift-operator-v1-ClusterCSIDriverList) schema |
| 401 - Unauthorized | Empty                                                                                               |

HTTP responses

HTTP method
`POST`

Description
create a ClusterCSIDriver

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| Parameter | Type                                                                                                                                  | Description |
|-----------|---------------------------------------------------------------------------------------------------------------------------------------|-------------|
| `body`    | [`ClusterCSIDriver`](../operator_apis/clustercsidriver-operator-openshift-io-v1.xml#clustercsidriver-operator-openshift-io-v1) schema |             |

Body parameters

| HTTP code          | Reponse body                                                                                                                          |
|--------------------|---------------------------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`ClusterCSIDriver`](../operator_apis/clustercsidriver-operator-openshift-io-v1.xml#clustercsidriver-operator-openshift-io-v1) schema |
| 201 - Created      | [`ClusterCSIDriver`](../operator_apis/clustercsidriver-operator-openshift-io-v1.xml#clustercsidriver-operator-openshift-io-v1) schema |
| 202 - Accepted     | [`ClusterCSIDriver`](../operator_apis/clustercsidriver-operator-openshift-io-v1.xml#clustercsidriver-operator-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                                                                 |

HTTP responses

## /apis/operator.openshift.io/v1/clustercsidrivers/{name}

| Parameter | Type     | Description                  |
|-----------|----------|------------------------------|
| `name`    | `string` | name of the ClusterCSIDriver |

Global path parameters

HTTP method
`DELETE`

Description
delete a ClusterCSIDriver

| Parameter | Type     | Description                                                                                                                                                                                                                                              |
|-----------|----------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`  | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed |

Query parameters

| HTTP code          | Reponse body                                                                        |
|--------------------|-------------------------------------------------------------------------------------|
| 200 - OK           | [`Status`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-Status) schema |
| 202 - Accepted     | [`Status`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-Status) schema |
| 401 - Unauthorized | Empty                                                                               |

HTTP responses

HTTP method
`GET`

Description
read the specified ClusterCSIDriver

| HTTP code          | Reponse body                                                                                                                          |
|--------------------|---------------------------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`ClusterCSIDriver`](../operator_apis/clustercsidriver-operator-openshift-io-v1.xml#clustercsidriver-operator-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                                                                 |

HTTP responses

HTTP method
`PATCH`

Description
partially update the specified ClusterCSIDriver

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| HTTP code          | Reponse body                                                                                                                          |
|--------------------|---------------------------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`ClusterCSIDriver`](../operator_apis/clustercsidriver-operator-openshift-io-v1.xml#clustercsidriver-operator-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                                                                 |

HTTP responses

HTTP method
`PUT`

Description
replace the specified ClusterCSIDriver

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| Parameter | Type                                                                                                                                  | Description |
|-----------|---------------------------------------------------------------------------------------------------------------------------------------|-------------|
| `body`    | [`ClusterCSIDriver`](../operator_apis/clustercsidriver-operator-openshift-io-v1.xml#clustercsidriver-operator-openshift-io-v1) schema |             |

Body parameters

| HTTP code          | Reponse body                                                                                                                          |
|--------------------|---------------------------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`ClusterCSIDriver`](../operator_apis/clustercsidriver-operator-openshift-io-v1.xml#clustercsidriver-operator-openshift-io-v1) schema |
| 201 - Created      | [`ClusterCSIDriver`](../operator_apis/clustercsidriver-operator-openshift-io-v1.xml#clustercsidriver-operator-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                                                                 |

HTTP responses

## /apis/operator.openshift.io/v1/clustercsidrivers/{name}/status

| Parameter | Type     | Description                  |
|-----------|----------|------------------------------|
| `name`    | `string` | name of the ClusterCSIDriver |

Global path parameters

HTTP method
`GET`

Description
read status of the specified ClusterCSIDriver

| HTTP code          | Reponse body                                                                                                                          |
|--------------------|---------------------------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`ClusterCSIDriver`](../operator_apis/clustercsidriver-operator-openshift-io-v1.xml#clustercsidriver-operator-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                                                                 |

HTTP responses

HTTP method
`PATCH`

Description
partially update status of the specified ClusterCSIDriver

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| HTTP code          | Reponse body                                                                                                                          |
|--------------------|---------------------------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`ClusterCSIDriver`](../operator_apis/clustercsidriver-operator-openshift-io-v1.xml#clustercsidriver-operator-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                                                                 |

HTTP responses

HTTP method
`PUT`

Description
replace status of the specified ClusterCSIDriver

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| Parameter | Type                                                                                                                                  | Description |
|-----------|---------------------------------------------------------------------------------------------------------------------------------------|-------------|
| `body`    | [`ClusterCSIDriver`](../operator_apis/clustercsidriver-operator-openshift-io-v1.xml#clustercsidriver-operator-openshift-io-v1) schema |             |

Body parameters

| HTTP code          | Reponse body                                                                                                                          |
|--------------------|---------------------------------------------------------------------------------------------------------------------------------------|
| 200 - OK           | [`ClusterCSIDriver`](../operator_apis/clustercsidriver-operator-openshift-io-v1.xml#clustercsidriver-operator-openshift-io-v1) schema |
| 201 - Created      | [`ClusterCSIDriver`](../operator_apis/clustercsidriver-operator-openshift-io-v1.xml#clustercsidriver-operator-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                                                                 |

HTTP responses
